# haqor-bible

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: dart.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/uk/co/machshev/haqor/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
haqor-engine/: Cargo.toml
haqor-engine/src/: bible.rs  lib.rs  library.rs  main.rs  repo.rs
haqor-engine/test_library/: tbm.bbl.sqlite-journal
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
