[package]
name = "haqor-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.0"
log = "0.4.19"
sqlite = "0.30.4"
